# nlp-demos

./: .gitignore  README.md  lesk.py  lesk3.py  lesk4.py  pyproject.toml  stemming.py
