[tool.poetry]
name = "stemming"
version = "0.1.0"
description = "A tiny stemming demo for streamlit"
authors = ["Rik Bose <rbose@knox.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.6.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
