[tool.poetry]
name = "nlp-demos"
version = "0.1.0"
description = "A set of small nlp demos for Streamlit"
authors = ["Rik Bose <rbose@knox.edu>"]

[tool.poetry.dependencies]
python = "3.7.12"
nltk = "^3.6.7"
st-annotated-text = "^2.0.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz"}

[tool.poetry.dev-dependencies]
streamlit = "^1.3.1"
watchdog = "^2.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
